--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Momentum App</title>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vanilla Challenge</title>
+    <link rel="stylesheet" href="src/style.css" />
   </head>
-
   <body>
-    <h2>Hello!</h2>
+    <h1 id="title">Hello</h1>
     <script src="src/index.js"></script>
   </body>
 </html>
