--- a/index.html
+++ b/index.html
@@ -1,28 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Challenge</title>
+    <title>Time Until Christmas Eve<</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="src/style.css">
   </head>
-
   <body>
-      <div id="title">Random Number Game</div>
-    <div class="input-text">Generate a number between 0 and 
-      <form id="generate">
-        <input class="generateNumberBetween" required type="text"></input>
-      </form>
-    </div>
-<div class="input-text">Guess the number:
-  <form id="numberSubmitBtn">
-    <input id="guessTheNumber" required type="text" />      
-    <input type="submit" value="play!"></input>
-  </form>
-</div>
-<div id="result" class="hidden">
-  
-</div>
+    <h1>Time Until Christmas Eve</h1>
+    <h2 class="js-clock"></h2>
     <script src="src/index.js"></script>
   </body>
 </html>
-
