--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Time Until Christmas Eve<</title>
+    <title>Vanilla Challenge</title>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="src/style.css" />
   </head>
+
   <body>
-    <h1>Time Until Christmas Eve</h1>
-    <h2 class="js-clock"></h2>
+    <div>
+      <button id="choseColorBtn">Give me color</button>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
