--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Vanilla Challenge</title>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="src/style.css" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>repl.it</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
-    <div>
-      <button id="choseColorBtn">Give me color</button>
-    </div>
-    <script src="src/index.js"></script>
+    <div class="first-box">Ostrich</div>
+    <div class="second-box">Ostrich</div>
+    <div class="thrid-box">Ostrich</div>
+    <div class="fourth-box">Ostrich</div>
+    <div class="fifth-box">Ostrich</div>
+    <div class="sixth-box">Ostrich</div>
+    <div class="seventh-box">Ostrich</div>
   </body>
 </html>
