--- a/index.html
+++ b/index.html
@@ -1,18 +1,55 @@
+\
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>repl.it</title>
-    <link rel="stylesheet" href="style.css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div class="first-box">Ostrich</div>
-    <div class="second-box">Ostrich</div>
-    <div class="thrid-box">Ostrich</div>
-    <div class="fourth-box">Ostrich</div>
-    <div class="fifth-box">Ostrich</div>
-    <div class="sixth-box">Ostrich</div>
-    <div class="seventh-box">Ostrich</div>
+    <h1>Foreword, Contributors</h1>
+
+    <div class="grid">
+      <div class="a">
+        <div>Tools for Slowing Down</div>
+        <div>Chloe Geoghegan & Chloe Reith</div>
+      </div>
+      <div class="b">
+        <div>
+          The Curatorial as a Liveable Subject Position:Hospitality and
+          Differential Consciousness
+        </div>
+        <div>Danny Butt</div>
+      </div>
+      <div class="c"></div>
+      <div class="d">
+        <div>Community, Community Art, Community Art in Howlck</div>
+        <div>Balamonhan Shingade</div>
+      </div>
+      <div class="e">
+        <div>The (Old) New Spirit of Curating and Myths of Nomadism</div>
+        <div>Tim Gentles</div>
+      </div>
+      <div class="f"></div>
+      <div class="g"></div>
+      <div class="h">
+        <div>Feeling Welcome?</div>
+        <div>Louisa Afoa & loana Gordon-Smith</div>
+      </div>
+      <div class="i">
+        <div>Pressing Singularities</div>
+        <div>Tendai John Mutambu & Robyn Maree Pickens</div>
+      </div>
+      <div class="j"></div>
+      <div class="k">
+        <div>We're in This Together</div>
+        <div>Vera Mey</div>
+      </div>
+      <div class="l">
+        <div>On Friendship</div>
+        <div>Rebecca Boswell</div>
+      </div>
+    </div>
   </body>
 </html>
