--- a/index.html
+++ b/index.html
@@ -1,54 +1,91 @@
-\
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>repl.it</title>
+    <title>챌린지</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>Foreword, Contributors</h1>
-
     <div class="grid">
-      <div class="a">
-        <div>Tools for Slowing Down</div>
-        <div>Chloe Geoghegan & Chloe Reith</div>
+      <div class="black">
+        <span>CHANGES</span>
+        <span>CHANGES</span>
+        <span>CHANGES</span>
+        <span>CHANGES</span>
+        <span>JULY 4-5</span>
       </div>
-      <div class="b">
-        <div>
-          The Curatorial as a Liveable Subject Position:Hospitality and
-          Differential Consciousness
-        </div>
-        <div>Danny Butt</div>
+      <div class="purple"></div>
+      <div class="red">
+        <span>ABOUT</span>
+        <span>CONTACT</span>
+        <span>VENUES</span>
+        <span>FAQ</span>
+        <span>PARTNERS</span>
       </div>
-      <div class="c"></div>
-      <div class="d">
-        <div>Community, Community Art, Community Art in Howlck</div>
-        <div>Balamonhan Shingade</div>
+      <div class="yellow">
+        <span>TICKETS</span>
       </div>
-      <div class="e">
-        <div>The (Old) New Spirit of Curating and Myths of Nomadism</div>
-        <div>Tim Gentles</div>
+
+      <div class="speakers">
+        <span>SPEAKERS</span>
+        <span>ABBY GEE</span>
+        <span>ALEX YABSLEY</span>
+        <span>ALEX ZACCARIA</span>
+        <span>ALLEGRA CALDWELL</span>
+        <span>BEATRICE</span>
+        <span>BILL WILSON [US]</span>
+        <span>BRIGID DIXON</span>
+        <span>CARLY JAMES[US]</span>
+        <span>CHERIE HU[US]</span>
+        <span>CHRIS MYLRAE</span>
+        <span>CHRISTIE MORGAN</span>
+        <span>CHRISTOPHER</span>
+        <span>MURATORE [US]</span>
+        <span>DANIELLE LEVY [US]</span>
+        <span>DAVE "DIZZ1" NORRIS</span>
+        <span>DAVID BENGE[NZ]</span>
+        <span>DAVID RAY</span>
+        <span>GARETH SMITH[US]</span>
+        <span>JENN PELLY[US]</span>
+        <span>JOSEPH EDWARD</span>
+        <span>KEYES[US]</span>
+        <span>KAT DOPPER</span>
+        <span>KATE DUNCAN</span>
+        <span>LORRAE MCKENNA</span>
+        <span>MARIHUZKA</span>
+        <span>CORNELIUS</span>
+        <span>MARKELL CASEY[US]</span>
       </div>
-      <div class="f"></div>
-      <div class="g"></div>
-      <div class="h">
-        <div>Feeling Welcome?</div>
-        <div>Louisa Afoa & loana Gordon-Smith</div>
-      </div>
-      <div class="i">
-        <div>Pressing Singularities</div>
-        <div>Tendai John Mutambu & Robyn Maree Pickens</div>
-      </div>
-      <div class="j"></div>
-      <div class="k">
-        <div>We're in This Together</div>
-        <div>Vera Mey</div>
-      </div>
-      <div class="l">
-        <div>On Friendship</div>
-        <div>Rebecca Boswell</div>
+      <div class="artists">
+        <span>ARTISTS</span>
+        <span>808S AND GREATEST</span>
+        <span>HITS</span>
+        <span>ACTIVITIES OF DAILY</span>
+        <span>LIVING</span>
+        <span>ALEXANDER BIGGS</span>
+        <span>ALICE SKYE</span>
+        <span>AUSMUTEANTS</span>
+        <span>BABY</span>
+        <span>BENCH PRESS</span>
+        <span>BIRDZ</span>
+        <span>BONES AND JONES</span>
+        <span>CABLE TIES</span>
+        <span>CHAPEL</span>
+        <span>CIVIC</span>
+        <span>CLEOPOLD</span>
+        <span>DARCY BAYLIS</span>
+        <span>DARK FAIR</span>
+        <span>DIANA</span>
+        <span>DIET</span>
+        <span>DRMNGNOW</span>
+        <span>EAST BRUNSWICK ALL</span>
+        <span>GIRLS CHOIR</span>
+        <span>EILISH GILLIGAN</span>
+        <span>ELIZABETH</span>
+        <span>EVAN KLAR</span>
+        <span>EVELYN IDA MORRIS</span>
+        <span>FRASER A. GORMAN</span>
       </div>
     </div>
   </body>
