--- a/index.html
+++ b/index.html
@@ -7,86 +7,45 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div class="grid">
-      <div class="black">
-        <span>CHANGES</span>
-        <span>CHANGES</span>
-        <span>CHANGES</span>
-        <span>CHANGES</span>
-        <span>JULY 4-5</span>
-      </div>
-      <div class="purple"></div>
-      <div class="red">
-        <span>ABOUT</span>
-        <span>CONTACT</span>
-        <span>VENUES</span>
-        <span>FAQ</span>
-        <span>PARTNERS</span>
-      </div>
-      <div class="yellow">
-        <span>TICKETS</span>
+    <div class="sidebar_up">
+      <span>
+        CURRY CAFE ! CURRY CAFE! CURRY CAFE! FLEMINGTON & NORTHCOTE! NUMBER ONE
+        BEST QUALITY! VEG & NON.VEG! CURRY CAFE! CURRY CAFE ! CURRY CAFE!
+      </span>
+    </div>
+
+    <div class="main">
+      <div class="sidebar_left">
+        <span>LOCATIONS * MENU * SHOP</span>
+        <div class="sidebar_left-spicy">
+          <span>SPICY NEWSSLETTER</span>
+        </div>
+        <a class="sidebar_left-site" href="#">
+          <span>👍 😃</span>
+        </a>
       </div>
 
-      <div class="speakers">
-        <span>SPEAKERS</span>
-        <span>ABBY GEE</span>
-        <span>ALEX YABSLEY</span>
-        <span>ALEX ZACCARIA</span>
-        <span>ALLEGRA CALDWELL</span>
-        <span>BEATRICE</span>
-        <span>BILL WILSON [US]</span>
-        <span>BRIGID DIXON</span>
-        <span>CARLY JAMES[US]</span>
-        <span>CHERIE HU[US]</span>
-        <span>CHRIS MYLRAE</span>
-        <span>CHRISTIE MORGAN</span>
-        <span>CHRISTOPHER</span>
-        <span>MURATORE [US]</span>
-        <span>DANIELLE LEVY [US]</span>
-        <span>DAVE "DIZZ1" NORRIS</span>
-        <span>DAVID BENGE[NZ]</span>
-        <span>DAVID RAY</span>
-        <span>GARETH SMITH[US]</span>
-        <span>JENN PELLY[US]</span>
-        <span>JOSEPH EDWARD</span>
-        <span>KEYES[US]</span>
-        <span>KAT DOPPER</span>
-        <span>KATE DUNCAN</span>
-        <span>LORRAE MCKENNA</span>
-        <span>MARIHUZKA</span>
-        <span>CORNELIUS</span>
-        <span>MARKELL CASEY[US]</span>
+      <img src="screenshots/농장사진.jpg" />
+      <div class="text">
+        <span>🍛Curry CAFE</span>
       </div>
-      <div class="artists">
-        <span>ARTISTS</span>
-        <span>808S AND GREATEST</span>
-        <span>HITS</span>
-        <span>ACTIVITIES OF DAILY</span>
-        <span>LIVING</span>
-        <span>ALEXANDER BIGGS</span>
-        <span>ALICE SKYE</span>
-        <span>AUSMUTEANTS</span>
-        <span>BABY</span>
-        <span>BENCH PRESS</span>
-        <span>BIRDZ</span>
-        <span>BONES AND JONES</span>
-        <span>CABLE TIES</span>
-        <span>CHAPEL</span>
-        <span>CIVIC</span>
-        <span>CLEOPOLD</span>
-        <span>DARCY BAYLIS</span>
-        <span>DARK FAIR</span>
-        <span>DIANA</span>
-        <span>DIET</span>
-        <span>DRMNGNOW</span>
-        <span>EAST BRUNSWICK ALL</span>
-        <span>GIRLS CHOIR</span>
-        <span>EILISH GILLIGAN</span>
-        <span>ELIZABETH</span>
-        <span>EVAN KLAR</span>
-        <span>EVELYN IDA MORRIS</span>
-        <span>FRASER A. GORMAN</span>
+      <div class="notice">
+        <span>😃</span>
       </div>
+      <img src="screenshots/istockphoto-1172525658-1024x1024.jpg" />
+
+      <div class="sidebar_right">
+        <span>* ORDER TㅡA *</span>
+        <span></span>
+        <span>* RESERVATIONS *</span>
+      </div>
+    </div>
+
+    <div class="sidebar_down">
+      <span>
+        BEST QUALITY! STAY-NUMBER ONE BEST QUALITY! EVERY DAY OPEN! FLEMINGTON &
+        NORTHCOTE! HOME DELIVERY ~!
+      </span>
     </div>
   </body>
 </html>
