--- a/tolv/tolv.html
+++ b/tolv/tolv.html
@@ -134,17 +134,17 @@
             <span>Client login</span>
           </div>
         </div>
-    </main>
 
         <div class="footer-grid-bottom">
           <div>
-            <span></span>
+            <span>All rights reserved Tolv © 2022</span>
           </div>
-          <div>
-            <img src="#" />
+          <div class="footer-grid-bottom-logo">
+            <img src="screenshots/logo-bottom.PNG" />
           </div>
         </div>
       </footer>
+    </main>
 
     <script
       src="https://kit.fontawesome.com/99383d0259.js"
