--- a/beige/beige.html
+++ b/beige/beige.html
@@ -47,6 +47,7 @@
     <main>
       <div class="main-grid__column">
         <div class="main-grid-contents">
+          <div class="main-grid-invisible">https://www.google.com/search?</div>
           <div class="main-grid-date">
             <span>12. April 2022</span>
             <span>Marie Jaster</span>
@@ -63,6 +64,7 @@
         </div>
 
         <div class="main-grid-contents">
+          <div class="main-grid-blur">https://www.google.com/search?</div>
           <div class="main-grid-date">
             <span>12. April 2022</span>
             <span>Marie Jaster</span>
@@ -79,6 +81,7 @@
         </div>
 
         <div class="main-grid-contents">
+          <div class="main-grid-invisible">https://www.google.com/search?</div>
           <div class="main-grid-date">
             <span>12. April 2022</span>
             <span>Marie Jaster</span>
@@ -95,6 +98,7 @@
         </div>
 
         <div class="main-grid-contents">
+          <div class="main-grid-invisible">https://www.google.com/search?</div>
           <div class="main-grid-date">
             <span>12. April 2022</span>
             <span>Marie Jaster</span>
@@ -111,6 +115,7 @@
         </div>
 
         <div class="main-grid-contents">
+          <div class="main-grid-invisible">https://www.google.com/search?</div>
           <div class="main-grid-date">
             <span>12. April 2022</span>
             <span>Marie Jaster</span>
@@ -127,6 +132,7 @@
         </div>
 
         <div class="main-grid-contents">
+          <div class="main-grid-blur">https://www.google.com/search?</div>
           <div class="main-grid-date">
             <span>12. April 2022</span>
             <span>Marie Jaster</span>
@@ -143,6 +149,7 @@
         </div>
 
         <div class="main-grid-contents">
+          <div class="main-grid-invisible">https://www.google.com/search?</div>
           <div class="main-grid-date">
             <span>12. April 2022</span>
             <span>Marie Jaster</span>
@@ -159,6 +166,7 @@
         </div>
 
         <div class="main-grid-contents">
+          <div class="main-grid-invisible">https://www.google.com/search?</div>
           <div class="main-grid-date">
             <span>12. April 2022</span>
             <span>Marie Jaster</span>
@@ -175,6 +183,7 @@
         </div>
 
         <div class="main-grid-contents">
+          <div class="main-grid-invisible">https://www.google.com/search?</div>
           <div class="main-grid-date">
             <span>12. April 2022</span>
             <span>Marie Jaster</span>
@@ -191,6 +200,7 @@
         </div>
 
         <div class="main-grid-contents">
+          <div class="main-grid-blur">https://www.google.com/search?</div>
           <div class="main-grid-date">
             <span>12. April 2022</span>
             <span>Marie Jaster</span>
@@ -207,6 +217,7 @@
         </div>
 
         <div class="main-grid-contents">
+          <div class="main-grid-invisible">https://www.google.com/search?</div>
           <div class="main-grid-date">
             <span>12. April 2022</span>
             <span>Marie Jaster</span>
@@ -223,6 +234,7 @@
         </div>
 
         <div class="main-grid-contents">
+          <div class="main-grid-invisible">https://www.google.com/search?</div>
           <div class="main-grid-date">
             <span>12. April 2022</span>
             <span>Marie Jaster</span>
@@ -239,6 +251,7 @@
         </div>
 
         <div class="main-grid-contents">
+          <div class="main-grid-blur">https://www.google.com/search?</div>
           <div class="main-grid-date">
             <span>12. April 2022</span>
             <span>Marie Jaster</span>
@@ -255,6 +268,7 @@
         </div>
 
         <div class="main-grid-contents">
+          <div class="main-grid-invisible">https://www.google.com/search?</div>
           <div class="main-grid-date">
             <span>12. April 2022</span>
             <span>Marie Jaster</span>
@@ -271,6 +285,7 @@
         </div>
 
         <div class="main-grid-contents">
+          <div class="main-grid-invisible">https://www.google.com/search?</div>
           <div class="main-grid-date">
             <span>12. April 2022</span>
             <span>Marie Jaster</span>
@@ -287,6 +302,7 @@
         </div>
 
         <div class="main-grid-contents">
+          <div class="main-grid-blur">https://www.google.com/search?</div>
           <div class="main-grid-date">
             <span>12. April 2022</span>
             <span>Marie Jaster</span>
@@ -303,6 +319,7 @@
         </div>
 
         <div class="main-grid-contents">
+          <div class="main-grid-invisible">https://www.google.com/search?</div>
           <div class="main-grid-date">
             <span>12. April 2022</span>
             <span>Marie Jaster</span>
@@ -319,6 +336,7 @@
         </div>
 
         <div class="main-grid-contents">
+          <div class="main-grid-blur">https://www.google.com/search?</div>
           <div class="main-grid-date">
             <span>12. April 2022</span>
             <span>Marie Jaster</span>
@@ -335,6 +353,7 @@
         </div>
 
         <div class="main-grid-contents">
+          <div class="main-grid-blur">https://www.google.com/search?</div>
           <div class="main-grid-date">
             <span>12. April 2022</span>
             <span>Marie Jaster</span>
@@ -351,6 +370,7 @@
         </div>
 
         <div class="main-grid-contents">
+          <div class="main-grid-invisible">https://www.google.com/search?</div>
           <div class="main-grid-date">
             <span>12. April 2022</span>
             <span>Marie Jaster</span>
@@ -367,6 +387,7 @@
         </div>
 
         <div class="main-grid-contents">
+          <div class="main-grid-invisible">https://www.google.com/search?</div>
           <div class="main-grid-date">
             <span>12. April 2022</span>
             <span>Marie Jaster</span>
@@ -383,6 +404,7 @@
         </div>
 
         <div class="main-grid-contents">
+          <div class="main-grid-invisible">https://www.google.com/search?</div>
           <div class="main-grid-date">
             <span>12. April 2022</span>
             <span>Marie Jaster</span>
@@ -399,6 +421,7 @@
         </div>
 
         <div class="main-grid-contents">
+          <div class="main-grid-invisible">https://www.google.com/search?</div>
           <div class="main-grid-date">
             <span>12. April 2022</span>
             <span>Marie Jaster</span>
@@ -415,6 +438,7 @@
         </div>
 
         <div class="main-grid-contents">
+          <div class="main-grid-blur">https://www.google.com/search?</div>
           <div class="main-grid-date">
             <span>12. April 2022</span>
             <span>Marie Jaster</span>
