JS코드로 이미지전환
이미지 전환

--- a/10x19/index.html
+++ b/10x19/index.html
@@ -18,22 +18,22 @@
       </div>
 
       <div class="sidebar-left-number">
-        <div>#10</div>
-        <div>#9</div>
-        <div>#8</div>
-        <div>#7</div>
-        <div>#6</div>
+        <div class="_number">#10</div>
+        <div class="_number">#9</div>
+        <div class="_number">#8</div>
+        <div class="_number">#7</div>
+        <div class="_number">#6</div>
       </div>
       <div class="contents-center-image">
-        <img src="screenshots/image.PNG" />
+        <img src="screenshots/image.PNG" id="img" />
       </div>
 
       <div class="sidebar-right-number">
-        <div>#5</div>
-        <div>#4</div>
-        <div>#3</div>
-        <div>#2</div>
-        <div>#1</div>
+        <div class="_number">#5</div>
+        <div class="_number">#4</div>
+        <div class="_number">#3</div>
+        <div class="_number">#2</div>
+        <div class="_number">#1</div>
       </div>
 
       <div class="footer">
@@ -43,5 +43,6 @@
       <div class="empty-first"></div>
       <div class="empty-second"></div>
     </div>
+    <script src="main.js"></script>
   </body>
 </html>
