--- a/wonhundred/index.html
+++ b/wonhundred/index.html
@@ -186,7 +186,7 @@
             </div>
             <div>
               <span>CUSTOMERCARE@WONHUNDRED.COM</span>
-              <span>+45 52 10 42 20‬</span>
+              <span>+45 52 10 42 20[U+202C]</span>
             </div>
           </div>
 
