--- a/wonhundred/index.html
+++ b/wonhundred/index.html
@@ -9,8 +9,13 @@
   </head>
   <body>
     <header>
-      <h1>Won Hundred</h1>
-      <nav>
+      <div class="header_div">
+        <h1>Won Hundred</h1>
+        <a href="#" class="navbar__toogleBtn">
+          <i class="fa-solid fa-bars"></i>
+        </a>
+      </div>
+      <nav class="navbar">
         <ul>
           <li><span>JEANS</span></li>
           <li><span>WOMEN</span></li>
@@ -215,5 +220,6 @@
       src="https://kit.fontawesome.com/99383d0259.js"
       crossorigin="anonymous"
     ></script>
+    <script src="main.js"></script>
   </body>
 </html>
